# MACH2

./: .gitignore  LICENSE  README.md  meta.yaml  notebook.ipynb  pyproject.toml  setup.py  update.ipynb
analysis/: example.ipynb  run.ipynb
analysis/.ipynb_checkpoints/: run-checkpoint.ipynb
data/breast/: A1-1.observed.labeling  A1-1.tree  A1-2.observed.labeling  A1-2.tree  A1-3.observed.labeling  A1-3.tree  A1-4.observed.labeling  A1-4.tree  A1.observed.labeling  A7-1.observed.labeling  A7-1.tree  A7-2.observed.labeling  A7.observed.labeling  A7.tree
data/breast/.ipynb_checkpoints/: A1-1-checkpoint.tree  A1-checkpoint.tree  A7-2-checkpoint.tree  A7.observed-checkpoint.labeling
data/gundem_2015/: generateFrequencies.py
data/gundem_2015/A22_noCNA/: reads_A22.tsv
data/gundem_2015/reported_clonetrees/: A12.labeling  A12.tree  A17.labeling  A17.tree  A21.labeling  A21.tree  A24.labeling  A24.tree  A34.labeling  A34.tree
data/lung/: TRACERxTest.automatic.observed.labeling  TRACERxTest.automatic.tree  TRACERxTest.coloring.txt
data/mcpherson_2016/: patient1.dot  patient10.dot  patient2.dot  patient3.dot  patient4.dot  patient7.dot  patient9.dot
data/osteosarcoma/: OSCE10.observed.labeling  OSCE10.tree  OSCE2.observed.labeling  OSCE2.tree  OSCE3.observed.labeling  OSCE3.tree  OSCE9.observed.labeling  OSCE9.tree
data/ovarian/: patient10.observed.labeling  patient2.observed.labeling  patient3.observed.labeling  patient3.tree  patient7.observed.labeling  patient7.tree  patient9.observed.labeling
data/ovarian/.ipynb_checkpoints/: patient1-checkpoint.tree  patient1.observed-checkpoint.labeling  patient10-checkpoint.tree  patient4-checkpoint.tree  patient4.observed-checkpoint.labeling
data/prostate/: A10.tree  A12.observed.labeling  A12.tree  A17.observed.labeling  A17.tree  A21.observed.labeling  A21.tree  A22.observed.labeling  A22.tree  A24.observed.labeling  A24.tree  A29.observed.labeling  A29.tree  A31.observed.labeling  A31.tree  A32.observed.labeling  A32.tree  A34.observed.labeling  A34.tree
data/prostate/.ipynb_checkpoints/: A10.observed-checkpoint.labeling  A17.observed-checkpoint.labeling
data/sims/m5/M/: T_seed209.location.labeling  T_seed209.observed.labeling  T_seed209.tree  T_seed473.location.labeling  T_seed473.observed.labeling  T_seed473.tree  T_seed512.location.labeling  T_seed512.observed.labeling  T_seed512.refined.tree  T_seed534.location.labeling  T_seed534.observed.labeling  T_seed534.refined.tree  T_seed545.location.labeling  T_seed545.observed.labeling  T_seed545.refined.tree  T_seed565.location.labeling  T_seed565.observed.labeling  T_seed565.refined.tree  T_seed694.location.labeling  T_seed694.observed.labeling  T_seed694.tree  T_seed76.location.labeling  T_seed76.observed.labeling  T_seed76.tree  T_seed865.location.labeling  T_seed865.observed.labeling  T_seed865.refined.tree  T_seed907.location.labeling  T_seed907.observed.labeling  T_seed907.refined.tree
data/sims/m5/R/: T_seed1140.location.labeling  T_seed1140.observed.labeling  T_seed1140.tree  T_seed17.location.labeling  T_seed17.observed.labeling  T_seed17.tree  T_seed2155.location.labeling  T_seed2155.observed.labeling  T_seed2155.tree  T_seed247.location.labeling  T_seed247.observed.labeling  T_seed247.tree  T_seed518.location.labeling  T_seed518.observed.labeling  T_seed518.refined.tree  T_seed538.location.labeling  T_seed538.observed.labeling  T_seed538.refined.tree  T_seed571.location.labeling  T_seed571.observed.labeling  T_seed571.refined.tree  T_seed950.location.labeling  T_seed950.observed.labeling  T_seed950.tree  T_seed955.location.labeling  T_seed955.observed.labeling  T_seed955.tree  T_seed981.location.labeling  T_seed981.observed.labeling  T_seed981.tree
data/sims/m5/S/: T_seed17.location.labeling  T_seed31.tree  (+28 more)
mach2/: clonetree.py  mach.py  migrationgraph.py  solutionset.py
mach2/.ipynb_checkpoints/: clonetree-checkpoint.py  mach-checkpoint.py  migrationgraph-checkpoint.py  solutionset-checkpoint.py
src/mach2/: __init__.py  __main__.py  clonetree.py  mach.py  mach2.py  migrationgraph.py  phylogeny.py  solutionset.py  tree.py  utils.py
(+626 files in other folders)
