[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mach2"
version = "1.0.0"
authors = [
  { name="Mrinmoy Saha Roddur", email="mroddur2@illinois.edu" },
]
description = "Migration Analysis of Clonal History 2"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["Computational biology", "Bioinformatics", "Cancer", "Metastasis", "Phylogeny"]
dependencies = [
    'pandas',
    'networkx',
    'gurobipy',
    "jupyterlab",
    "graphviz",
    "mach2viz"
]

[project.scripts]
mach2 = "mach2.__main__:main"

[project.urls]
"Homepage" = "https://github.com/elkebir-group/MACH2"
"Bug Tracker" = "https://github.com/elkebir-group/MACH2/issues"